# parse_percept_json

./: README.md  pyproject.toml
src/parse_percept_json/: __init__.py  parse_percept_json.py
src/read_sensing/: __init__.py  read_sensing.py
