[project]
name = "parse_percept_json"
version = "0.1.0"
description = "Read DBS sensing data files from Medtronic Percept implant"
readme = "README.md"
authors = [
    { name = "Malte Lau Petersen", email = "maltelau@mlpetersen.dk" }
]
requires-python = ">=3.7"
dependencies = [
    "mne>=1.3.1",
    "polars>=0.18.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
